# croplat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  croplat.sln
croplat/: croplat.cpp  croplat.vcxproj  croplat.vcxproj.filters
src/: Keyem.cpp  Keyem.h  SysInfoCompiler.cpp  SysInfoCompiler.h  config.cpp  config.h  log.h  logger.cpp  logger.h
